<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:gravity="center_horizontal"
            android:text="@string/african_institute"
            android:textAlignment="center"
            android:textColor="@color/purple_700"
            android:textSize="35sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/home_result"
            android:layout_width="match_parent"
            android:layout_height="188dp"
            android:layout_marginTop="30sp"
            app:srcCompat="@drawable/bg_2"
            android:contentDescription="@string/bgimg" />

        <TextView
            android:background="#9C27B0"
            android:id="@+id/tvText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:gravity="center_horizontal"
            android:text="@string/tv_Result"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"

        android:background="@drawable/bb_gradient"
        android:orientation="vertical"
        android:padding="20sp">

        <EditText
            android:id="@+id/editStudentId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/id_no"
            android:inputType="textPersonName"
            android:textColorHint="@color/white" />
        <Button
            android:id="@+id/btnsearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/submit" />
    </LinearLayout>

</android.widget.LinearLayout>