<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_marginTop="10sp"
            app:srcCompat="@drawable/account" />

        <TextView
            android:id="@+id/tvText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:gravity="center_horizontal"
            android:text="@string/aidls"
            android:textAlignment="center"
            android:textColor="@color/purple_700"
            android:textSize="40sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp"
        android:background="@color/color11"
        android:orientation="vertical"
        android:padding="10sp">


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#CC7FCC"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20sp"
                android:background="@color/teal_700"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:gravity="center_horizontal"
                    android:text="@string/login"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="43sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:layout_marginTop="10sp"
                    android:layout_marginBottom="10sp"
                    android:background="@color/color10"
                    android:orientation="vertical"
                    android:padding="40sp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10sp">

                    <EditText
                        android:id="@+id/editUsername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/enterun"
                        android:inputType="textPersonName"
                        android:textColorHint="@color/white" />

                    <EditText
                        android:id="@+id/editPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/enterpw"
                        android:inputType="textPassword"
                        android:textColorHint="@color/white" />

                    <Button
                        android:id="@+id/btnlogin"
                        android:layout_width="147dp"
                        android:layout_height="wrap_content"
                        android:text="@string/login"
                        android:textColorHint="@color/white" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</android.widget.LinearLayout>